[package]
name = "rami-cli"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rami-core = { path = "../rami-core" }
tokio = { version = "1.37.0", features = ["full"] }
num_cpus = "1.16.0"
anyhow = "1.0.82"

[[bin]]
name = "rami"
path = "src/main.rs"
